--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,9 +1,9 @@
 <div class="about">
   This project was made by
-  <a href="https://tasteslikestrawberries.github.io" target="_blank">Anja</a>.
+  <a href="https://annydot.github.io" target="_blank">Anja</a>.
   Code available on
   <a
-    href="https://github.com/tasteslikestrawberries/angular-playground"
+    href="https://github.com/annydot/angular-playground"
     target="_blank">
     <fa-icon [icon]="faGithubAlt" [ngStyle]="{ fontSize: '1.5em' }"></fa-icon>
   </a>
